contact_info wrap fix

--- a/style/style.less
+++ b/style/style.less
@@ -957,20 +957,20 @@ body {
 	}
 	&_input {
 		display: block;
-		width:100%;
+		width: 100%;
 		box-sizing: inherit; 
 		margin-bottom: 15px;
 		padding-left: 20px;
-		font:@font-default;
+		font: @font-default;
 		font-size: 15px;
 		font-weight: 300;
 		color: @color-font-inverted;
-		line-height:50px;
+		line-height: 50px;
 		border: none;
 		background: rgba(0,196,196,.5);
-		height:50px;
+		height: 50px;
 		&:last-child {
-			height:250px; 
+			height: 250px; 
 			resize: none;
 		}
 		&:placeholder {
@@ -996,6 +996,9 @@ body {
 		font-size: 20px;
 		font-weight: 300;
 		color:  @color-font;
+		@media screen and (max-width: 800px) {
+			margin-left: 12%;
+		}
 		@media screen and (max-width: @bp-tablet) {
 			float: none;
 			margin-left: 0px;
